<resources>
    <string name="app_name">GalonWater</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- login de usuario -->
    <string name="title_login_screen">Iniciar Sesión</string>
    <string name="btn_text_login">Log In</string>
    <string name="hint_mail_address">Escribe tu correo</string>
    <string name="hint_passwords">Escribe tu password</string>

    <!-- Registro de usuario -->
    <string name="title_register_screen">Registrar Datos</string>
    <string name="btn_text_register">Crear cuenta</string>
    <string name="hint_name">Escribe tu nombre</string>
    <string name="hint_mail">Escribe tu correo electrónico</string>
    <string name="hint_phone_number">Escribe tu número de teléfono</string>
    <string name="hint_address">Escribe tu domicilio</string>
    <string name="hint_password">Escribe tu password</string>
    <string name="hint_confirm_pass">Confirma tu password</string>

</resources>